<resources>
    <string name="app_name">I Love Reading</string>
    <string name="title_activity_basic">Profile</string>
    <string name="title_profile">PROFILE</string>
    <string name="title_own">OWN</string>
    <string name="title_borrow">BORROW</string>
    <string name="title_all">ALL</string>
    <string name="title_request">REQUEST</string>
    <string name="signUp">Don\'t have account? Sign Up</string>
    <string name="username"> Username</string>
    <string name="password"> Password</string>
    <string name="Email"> Email</string>
    <string name="Cancel"> Cancel</string>
    <string name="login"> Log In</string>
    <string name="app_logo">log of app</string>
    <string name="SignupButton">Sign up</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="comment">comment</string>
    <string name="bookname">BookName</string>
    <string name="watchlist">Watch List</string>
    <string name="description">Description</string>
    <string name="phone">User phone number</string>

    <string name="borrow">Borrow</string>

    <string name="action_settings">Settings</string>

    <string name="Name_Hint">Enter Your Book Name</string>

    <string name="Author_Hint">Enter Your Author Name</string>

    <string name="Description_Hint">Enter Your Description</string>
    <string name="Classification_Hint">Select the class of this book</string>
    <string name="Classification">Classification</string>
    <string name="BorrowToast">Borrow request has been sent</string>
    <string name="WatchListToast">The Book has been added to the WatchList</string>
    <string name="WatchListCancelToast">Undo WatchList</string>
    <string name="SelectionTile">"Select the possible classes"</string>
    <string name="CommentTile">"Default Comment Title"</string>
    <string name="UserName">Default User Name</string>
    <string name="CommentContent">Default User Content</string>
    <string name="CommentTime">2019/2/31</string>
    <string name="RequestScan">Scan</string>
    <string name="RequestMap">Map</string>
    <string name="Button_accept">Accept</string>
    <string name="Button_deny">Deny</string>
    <string name="AddComment">Add a new Comment</string>
    <string name="EnterComment">Enter your comment</string>
    <string name="ClickRate">Click to select the rate</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="BorrowCancelToast">Borrow Request Canceled</string>

    <string name="edit">Edit</string>
    <string name="photos">Photos</string>
    <string name="log_out">Log out</string>
    <string name="todo">TODO</string>
    <string name="userid">UserID</string>
    <string name="useremail">UserEmail</string>
    <string name="refresh">refresh</string>
    <string name="userBirthday">UserBirthday</string>
    <string name="_125">125</string>
    <string name="followers">Followers</string>
    <string name="_1205">1205</string>
    <string name="following">Following</string>
    <string name="_360">360</string>
    <string-array name="allfragmentfilter">
        <item>All</item>
        <item>Available</item>
        <item>Borrowed</item>

    </string-array>

    <string-array name="borrowedfilter">
        <item>Borrowing</item>

        <item>Request</item>
        <item>Accepted</item>

    </string-array>

    <string-array name="ownfilter">
        <item>All</item>
        <item>Available</item>
        <item>Borrowed</item>

    </string-array>

    <string-array name="requestfilter">
        <item>All</item>
        <item>My Request</item>
        <item>Other Request</item>

    </string-array>
    <string name="title_activity_user_search">UserSearchActivity</string>


</resources>
