<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_profile"/>

    <item
        android:id="@+id/navigation_own"
        android:icon="@drawable/bookk"
        android:title="@string/title_own"/>

    <item
        android:id="@+id/navigation_borrow"
        android:icon="@drawable/onebook"
        android:title="@string/title_borrow"/>

    <item
        android:id="@+id/navigation_all"
        android:icon="@drawable/book"
        android:title="@string/title_all"/>

    <item
        android:id="@+id/navigation_request"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_request"/>



</menu>
