<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#1A141414"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#1A141414">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1A141414"
            android:padding="8dp">

            <TextView
                android:id="@+id/TextViewUserName"
                android:layout_width="139dp"
                android:layout_height="16dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="11dp"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="194dp"
                android:layout_marginRight="194dp"
                android:layout_toEndOf="@+id/ImageViewUserIcon"
                android:layout_toRightOf="@+id/ImageViewUserIcon"
                android:text="@string/UserName"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="#000000"
                android:textSize="12sp" />

            <com.varunest.sparkbutton.SparkButton
                android:id="@+id/spark_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TextViewCommentContent"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="-2dp"
                app:sparkbutton_activeImage="@drawable/thumb_on"
                app:sparkbutton_iconSize="15dp"
                app:sparkbutton_inActiveImage="@drawable/thumb_off"
                app:sparkbutton_primaryColor="@color/heart_primary_color"
                app:sparkbutton_secondaryColor="@color/heart_secondary_color" />

            <ImageView
                android:id="@+id/ImageViewUserIcon"
                android:layout_width="59dp"
                android:layout_height="49dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"

                android:layout_marginTop="8dp"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/TextViewCommentTime"
                android:layout_width="56dp"
                android:layout_height="15dp"
                android:layout_below="@id/TextViewUserName"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="9dp"
                android:layout_toEndOf="@+id/CommentRatingBar"
                android:layout_toRightOf="@+id/CommentRatingBar"
                android:text="@string/CommentTime"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/TextViewCommentContent"
                android:layout_width="378dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TextViewUserName"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/CommentContent"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/CommentRatingBar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TextViewUserName"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="7dp"
                android:layout_toEndOf="@+id/ImageViewUserIcon"
                android:layout_toRightOf="@+id/ImageViewUserIcon"
                android:max="5"
                android:numStars="5"
                android:stepSize=".5" />

            <TextView
                android:id="@+id/TextViewFavorNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TextViewCommentContent"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="11dp"
                android:layout_toEndOf="@+id/spark_button"
                android:layout_toRightOf="@+id/spark_button"
                android:text="0" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>